# semantic-book-recommender

./: .gitignore  README.md  app.py  pyproject.toml
config/: logger.py
data/: cleaned_books.csv  cleaned_categorized_books.csv  isbn_description.txt
experiments/: data-exploration.ipynb  sentiment_analysis.ipynb  text_classification.ipynb  vector_database.ipynb
processing/: extract.py  load.py  models.py  transform.py
utils/: docs_to_df.py  ui_functions.py
