[project]
name = "semantic-book-recommender"
version = "0.1.0"
package_mode = false
description = ""
authors = [
    {name = "Ahmad Al Fayad Chowdhury",email = "fayad.chowdhury@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "gradio (>=5.31.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false